tests/baselines/reference/InvalidNonInstantiatedModule.errors.txt
tests/cases/conformance/internalModules/moduleDeclarations/InvalidNonInstantiatedModule.ts(5,9): error TS2708: Cannot use namespace 'M' as a value.
tests/cases/conformance/internalModules/moduleDeclarations/InvalidNonInstantiatedModule.ts(7,15): error TS2708: Cannot use namespace 'M' as a value.


==== tests/cases/conformance/internalModules/moduleDeclarations/InvalidNonInstantiatedModule.ts (2 errors) ====
    module M {
        export interface Point { x: number; y: number }
    }
    
    var m = M; // Error, not instantiated can not be used as var
            ~
!!! error TS2708: Cannot use namespace 'M' as a value.
    
    var x: typeof M; // Error only a namespace
                  ~
!!! error TS2708: Cannot use namespace 'M' as a value.
    